--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,13 +32,13 @@
     </div>
   </div>
 
-  <div id="agenticBox" class="hidden rounded-xl p-5 mb-6 border border-indigo-300 bg-indigo-50 dark:bg-gray-800 dark:border-indigo-700">
+  <!-- <div id="agenticBox" class="hidden rounded-xl p-5 mb-6 border border-indigo-300 bg-indigo-50 dark:bg-gray-800 dark:border-indigo-700">
     <h3 class="text-xl font-bold text-indigo-700 dark:text-indigo-300 mb-1">🤖 Smart AI Suggestion</h3>
     <p id="agenticGoal" class="font-semibold text-sm mb-1 text-indigo-600"></p>
     <p id="agenticReason" class="text-sm text-gray-800 dark:text-gray-200 mb-2"></p>
     <ul id="agenticSubs" class="list-disc list-inside text-sm text-gray-800 dark:text-gray-200"></ul>
     <ol id="agenticSteps" class="list-decimal list-inside text-sm text-gray-800 dark:text-gray-200 mt-2"></ol>
-  </div>
+  </div> -->
 
   <div id="resultsContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <p id="loadingIndicator" class="hidden col-span-full text-center text-lg text-gray-600 dark:text-gray-300">Searching…</p>
